--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^4.1.2",
+    "nuxt-storage": "^1.2.2",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   }
